Add one more CTA and email address to contacts

--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -69,7 +69,7 @@
   },
 
   "fromCreator": {
-    "title": "Від Засновника",
-    "text":"<0>Привіт, я Андрій – людина за Razom. Протягом більше десяти років я боровся, щоб знайти партнерів та однодумців для спільних бізнес-мрій. Як інтроверт з ADHD, мені було важко знайомитися та зв'язуватися з іншими людьми, які поділяли мою пристрасть.</0><1>Моя подорож привела мене до створення Razom, платформи, яка дозволяє ентузіастам, як я, знаходити своїх людей та співпрацювати над дивовижними проектами, не відчуваючи стресу від традиційного нетворкінгу. Razom створений для того, щоб зробити це простим та приємним для всіх – чи ви інтроверт, маєте ADHD або просто прагнете більш розслабленого способу зв'язуватися з іншими.</1><2>Я радий поділитися Razom з вами, і сподіваюся, що це допоможе вам знайти підтримку, партнерства та дружбу, необхідні для втілення ваших ідей. Давайте створимо щось надзвичайне разом!</2>"
+    "title": "Від засновника",
+    "text":"<0>Привіт, я Андрій – людина за Razom. Протягом більше десяти років я боровся, щоб знайти партнерів та однодумців для спільних бізнес-мрій. Як інтроверт з ADHD, мені було важко знайомитися та зв'язуватися з іншими людьми, які поділяли мою пристрасть.</0><1>Моя подорож привела мене до створення Razom, платформи, яка дозволяє ентузіастам, як я, знаходити своїх людей та співпрацювати над дивовижними проектами, не відчуваючи стресу від традиційного нетворкінгу. Razom створений для того, щоб зробити це простим та приємним для всіх – чи ви інтроверт, маєте ADHD або просто прагнете більш розслабленого способу зв'язуватися з іншими.</1><2>Я радий поділитися Razom з вами, і сподіваюся, що це допоможе вам знайти підтримку, партнерства та дружбу, необхідні для втілення ваших ідей. Давайте створимо щось надзвичайне разом!</2><3>Якщо ви бажаєте звʼязатися зі мною напишіть мені за адресою:</3>"
   }
 }
