Add OG tags. Fix ESLint

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -1,75 +1,62 @@
 {
   "site": {
-    "title": "Razom — Поєднує Ентузіастів по Всьому Світу",
-    "description": "Унікальна платформа для з'єднання ентузіастів з різних галузей, щоб співпрацювати над надзвичайними проектами. Знайдіть однодумців, партнерів, інвесторів та друзів у технологічних стартапах, домашніх виробниках печива та інших сферах. Приєднуйтесь до нашої спільноти Razom та будуйте успішне майбутнє!"
+    "title": "Razom — Поєднує Ентузіастів по Всьому Світу 🚀",
+    "description": "Унікальна платформа обʼєднання ентузіастів. Знаходьте однодумців та творіть разом, від новітніших стартапів до продажу домашнього печива. Razom – це місце де ентузіасти об'єднуються, а мрії здійснюються!"
   },
-
   "navbar": {
     "features": "Особливості",
     "howItWorks": "Як це працює",
     "betaAccess": "Отрмати доступ",
     "contact": "Контакти"
   },
-
   "hero": {
     "title": "Де ентузіасти об'єднуються, а мрії здійснюються",
-    "subTitle": "Разом з'єднує звичайних людей, таких як ви і я, і допомагає їм створювати класні продукти",
+    "subTitle": "Разом об'єднує звичайних людей, таких як ви і я, і допомагає їм створювати класні продукти",
     "button": "Приєднатися до закритої бети"
   },
-
   "features": {
     "title": "Відкрий для себе силу <0>Razom</0> \uD83E\uDDBE",
-
     "first": {
       "title": "Будь-який Етап",
-      "description": "Незалежно від того, чи тільки починаєте ви з <0>ідеєю</0>, маєте <1>мінімально життєздатний продукт</1>, чи ведете вже <2>існуючий бізнес</2>, Razom тут, щоб підтримати вас. З'єднуйтеся з однодумцями, які допоможуть підняти ваш проект на новий рівень."
+      "description": "Незалежно від того, чи тільки починаєте ви з <0>ідеєю</0>, маєте <1>мінімально життєздатний продукт</1>, чи керуєте вже <2>існуючим бізнесом</2>, Razom тут, щоб підтримати вас. Об'єднуйтеся з однодумцями, які допоможуть підняти ваш проект на новий рівень."
     },
-
     "second": {
       "title": "Будь-яка Галузь",
-      "description": "Від <0>передових стартапів</0> до затишних <1>домашніх кондитерських виробництв</1>, Razom тут для мрійників у всіх галузях. З'єднуйтеся з партнерами, інвесторами та друзями, які поділяють ваш ентузіазм і привносять свіжі ідеї та знання у ваш проект."
+      "description": "Від <0>передових стартапів</0> до затишних <1>домашніх кондитерських виробництв</1>, Razom тут для мрійників у всіх галузях. Об'єднуйтеся з партнерами, інвесторами та друзями, які поділяють ваш ентузіазм і привносять свіжі ідеї та знання у ваш проект."
     },
-
     "third": {
       "title": "Будь-яке Місце",
-      "description": "Незалежно від того, чи знаходитеся ви <0>в одному місті</0>, чи на <1>іншому кінці світу</1>, Razom тут, щоб з'єднати вас з людьми, які вам потрібні для успіху. З'єднуйтеся з людьми, які поділяють вашу пристрасть і можуть допомогти вам підняти ваш проект на новий рівень."
+      "description": "Незалежно від того, чи знаходитеся ви <0>в одному місті</0>, чи на <1>іншому кінці світу</1>, Razom тут, щоб з'єднати вас з людьми, які вам потрібні для успіху. Знаходьте людей, які поділяють вашу пристрасть та йдіть разом у одному напрямку."
     }
   },
-
   "quote": {
     "firstLine": "Якщо хочеш швидко йти, йди сам.",
     "secondLine": "Якщо хочеш йти далеко, йди <0>Razom</0>",
     "description": "<0>Razom</0> is an Ukrainian word meaning <1>together</1>"
   },
-
   "howItWorks": {
     "title": "Як це працює",
     "subTitle": "Лише 3 прості кроки щоб почати",
-
     "first": {
       "title": "Опублікуйте свій проект або ідею",
       "description": "Поділіться своєю геніальною ідеєю чи проектом зі спільнотою Razom"
     },
-
     "second": {
       "title": "Знайдіть однодумців-ентузіастів",
       "description": "Відкрийте для себе та зв'яжіться з ентузіастами, які поділяють ваші захоплення"
     },
-
     "third": {
       "title": "Об'єднуйтесь та творіть разом",
       "description": "Співпрацюйте, розвивайте інновації та втілюйте свої мрії у життя у команді"
     }
   },
-
   "subscribe": {
     "title": "Ви готові йти за своїми мріями?",
     "subTitle": "Отримайте ранній доступ до платформи Разом та почніть зв'язуватися з ентузіастами, подібними до вас",
     "emailPlaceholder": "Ваша електронна пошта"
   },
-
   "fromCreator": {
     "title": "Від засновника",
-    "text":"<0>Привіт, я Андрій – людина за Razom. Протягом більше десяти років я боровся, щоб знайти партнерів та однодумців для спільних бізнес-мрій. Як інтроверт з ADHD, мені було важко знайомитися та зв'язуватися з іншими людьми, які поділяли мою пристрасть.</0><1>Моя подорож привела мене до створення Razom, платформи, яка дозволяє ентузіастам, як я, знаходити своїх людей та співпрацювати над дивовижними проектами, не відчуваючи стресу від традиційного нетворкінгу. Razom створений для того, щоб зробити це простим та приємним для всіх – чи ви інтроверт, маєте ADHD або просто прагнете більш розслабленого способу зв'язуватися з іншими.</1><2>Я радий поділитися Razom з вами, і сподіваюся, що це допоможе вам знайти підтримку, партнерства та дружбу, необхідні для втілення ваших ідей. Давайте створимо щось надзвичайне разом!</2><3>Якщо ви бажаєте звʼязатися зі мною напишіть мені за адресою:</3>"
+    "text": "<0>Привіт, я Андрій – людина за Razom. Протягом більше десяти років я боровся, щоб знайти партнерів та однодумців для спільних бізнес-мрій. Як інтроверт з ADHD, мені було важко знайомитися та зв'язуватися з іншими людьми, які поділяли мою пристрасть.</0><1>Моя подорож привела мене до створення Razom, платформи, яка дозволяє ентузіастам, як я, знаходити своїх людей та співпрацювати над дивовижними проектами, не відчуваючи стресу від традиційного нетворкінгу. Razom створений для того, щоб зробити це простим та приємним для всіх – чи ви інтроверт, маєте ADHD або просто прагнете більш розслабленого способу зв'язуватися з іншими.</1><2>Я радий поділитися Razom з вами, і сподіваюся, що це допоможе вам знайти підтримку, партнерства та дружбу, необхідні для втілення ваших ідей. Давайте створимо щось надзвичайне разом!</2><3>Якщо ви бажаєте звʼязатися зі мною напишіть мені за адресою:</3>"
   }
 }
