--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -11,7 +11,7 @@
   },
   "hero": {
     "title": "Де ентузіасти об'єднуються, а мрії здійснюються",
-    "subTitle": "Разом об'єднує звичайних людей, таких як ви і я, і допомагає їм створювати класні продукти",
+    "subTitle": "Разом об'єднує звичайних людей, таких як ти і я, і допомагає їм створювати класні продукти",
     "button": "Приєднатися до закритої бети"
   },
   "features": {
